# agent

./: .gitignore  CONTRIBUTING.md  LICENSE  Readme.md  gt7_processing.py  gt7_telemetry_agent.py  lap.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  gt7_agent_build.yml  gt7_agent_release.yml  gt7_agent_tests.yml
common/: backend.py  lap.py
gt7/: gt7_telemetry_agent.py
tests/: test_backend.py  test_gt7_processing.py  test_integration.py  test_lap.py
